# syncwatch-web

./: .gitattributes  .gitignore  .gitmodules  CNAME  README.md  Syncwatch.nsi  build.bat  build.js  help.html  index.html  index.js  install.bat  main.js  package-lock.json  package.json  peers.js  syncwatch-desktop.html  syncwatch.reg  torrenthandler.js  tsconfig.json  videoplayer.js  webpack.config.js
.github/workflows/: deploy.yml
firebase_rules/: rules.json
gui/: CMakeLists.txt
gui/src/: interface.cpp  main.cpp  video_player.c  video_player.h
public/: default.css  help.html  index.html  snackbar.css
src/: app.tsx  components.tsx  index.d.ts  index.ts  index.tsx  interface.d.ts  interface.ts  peers.ts  room.d.ts  room.ts  sync.d.ts  sync.ts  torrenthandler.ts  tui.ts  video.d.ts  video.ts  videoplayer.ts  webtorrent.d.ts  webtorrent.ts
src/core/: config.ts.example  peers.ts  room.ts  torrenthandler.ts  videoplayer.ts
src/desktop/: index.ts  tui.ts  videoplayer.ts
tests/: main.js
